# Agent-Zero

./: README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
examples/: hybrid_system_demo.py  simple_dcop.py  slm_training_demo.py
src/agent_zero/: __init__.py  cli.py
src/agent_zero/agents/: __init__.py  belief_propagation_agent.py  input_classifier_agent.py  output_formatter_agent.py  slm_base.py
src/agent_zero/core/: __init__.py  agent_base.py  message.py  registry.py
src/agent_zero/models/: __init__.py  config_manager.py  model_factory.py  slm_interface.py
src/agent_zero/models/local/: __init__.py  local_slm_client.py  local_trainer.py  model_manager.py
src/agent_zero/models/remote/: __init__.py  anthropic_client.py  openai_client.py  together_client.py
src/agent_zero/models/training/: __init__.py  data_generator.py  training_pipeline.py
src/agent_zero/orchestrator/: __init__.py  hybrid_orchestrator.py  main_orchestrator.py
src/agent_zero/protocols/: __init__.py  communication.py
tests/integration/: test_system.py
tests/unit/: test_message.py  test_registry.py
